test/bad/classes/type06.px

class A def
    Int x

class B(A) def
    Int y


{B}? b = {B()}
{A}? a = b
